# geoips_proxyvis_global_composite

./: README.md  pyproject.toml
docs/source/my_package_api/: index.rst
docs/source/releases/latest/: 0.1.0.yaml
docs/source/userguide/: index.rst  template_instructions.rst
geoips_proxyvis_global_composite/: __init__.py
geoips_proxyvis_global_composite/plugins/yaml/products/: abi.yaml  ahi.yaml  seviri.yaml  stiched.yaml
my_package/plugins/modules/algorithms/: pmw_89test.py
my_package/plugins/yaml/products/: amsr2_using_product_defaults.yaml
tests/: test_all.sh
tests/scripts/: amsr2.global_clean.89-PCT-Using-Product-Defaults.sh  amsr2.tc_clean.89-PCT-Fully-Specified.sh  pvis_composite.sh  test_config.sh  test_config.yaml
